k8s/client.yml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    component: client
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: client
  template:
    metadata:
      labels:
        component: client
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: client
          image: 'ghcr.io/utscc09/drawhub/client:latest'
          imagePullPolicy: Always
          ports:
            - containerPort: 80
