k8s/mongo.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    component: mongo
  ports:
    - port: 27017
      targetPort: 27017

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mongo
  template:
    metadata:
      labels:
        component: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          imagePullPolicy: 'IfNotPresent'
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /var/lib/mongo/data
              name: mongo
      volumes:
        - name: mongo
          persistentVolumeClaim:
            claimName: mongo-pv-claim
