k8s/redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    component: redis
  ports:
    - port: 6379
      targetPort: 6379

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: redis
  template:
    metadata:
      labels:
        component: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          imagePullPolicy: 'IfNotPresent'
          ports:
            - containerPort: 6379
